--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                     </div>
                     <div class="flex items-center gap-4 pt-4">
                         <div class="flex -space-x-3">
-                            <img src="/assets/images/headshots/headshot-002.jpg" class="w-10 h-10 rounded-full border-2 border-background-dark object-cover" alt="User" />
+                            <img src="assets/images/headshots/headshot-001.jpg.jpg" class="w-10 h-10 rounded-full border-2 border-background-dark object-cover" alt="User" />
                             <img src="/assets/images/headshots/headshot-001.jpg" class="w-10 h-10 rounded-full border-2 border-background-dark object-cover" alt="User" />
                             <img src="/assets/images/headshots/headshot-003.jpg" class="w-10 h-10 rounded-full border-2 border-background-dark object-cover" alt="User" />
                         </div>
