--- a/index.html
+++ b/index.html
@@ -101,9 +101,9 @@
                     </div>
                     <div class="flex items-center gap-4 pt-4">
                         <div class="flex -space-x-3">
-                            <img src="assets/images/headshots/headshot-001.jpg.jpg" class="w-10 h-10 rounded-full border-2 border-background-dark object-cover" alt="User" />
-                            <img src="/assets/images/headshots/headshot-001.jpg" class="w-10 h-10 rounded-full border-2 border-background-dark object-cover" alt="User" />
-                            <img src="/assets/images/headshots/headshot-003.jpg" class="w-10 h-10 rounded-full border-2 border-background-dark object-cover" alt="User" />
+                            <img src="/images/headshots/headshot-001.png" class="w-10 h-10 rounded-full border-2 border-background-dark object-cover" />
+                            <img src="/images/headshots/headshot-002.png" class="w-10 h-10 rounded-full border-2 border-background-dark object-cover" />
+                            <img src="/images/headshots/headshot-003.png" class="w-10 h-10 rounded-full border-2 border-background-dark object-cover" />
                         </div>
                         <p class="text-sm text-[#a1adb5] font-medium">Joined by <span class="text-white font-bold">50k+</span> active users</p>
                     </div>
