--- a/index.html
+++ b/index.html
@@ -99,14 +99,6 @@
                             See Rates
                         </button>
                     </div>
-                    <div class="flex items-center gap-4 pt-4">
-                        <div class="flex -space-x-3">
-                            <img src="/assets/images/headshots/headshot-002.jpg" class="w-10 h-10 rounded-full border-2 border-background-dark object-cover" alt="User" />
-                            <img src="/assets/images/headshots/headshot-001.jpg" class="w-10 h-10 rounded-full border-2 border-background-dark object-cover" alt="User" />
-                            <img src="/assets/images/headshots/headshot-003.jpg" class="w-10 h-10 rounded-full border-2 border-background-dark object-cover" alt="User" />
-                        </div>
-                        <p class="text-sm text-[#a1adb5] font-medium">Joined by <span class="text-white font-bold">50k+</span> active users</p>
-                    </div>
                 </div>
                 
                 <div class="relative flex justify-center">
@@ -172,21 +164,6 @@
                     <!-- Decorative Blurs -->
                     <div class="absolute -top-10 -right-10 w-32 h-32 bg-primary/20 blur-[60px] rounded-full"></div>
                     <div class="absolute -bottom-10 -left-10 w-40 h-40 bg-primary/10 blur-[80px] rounded-full"></div>
-                </div>
-            </div>
-        </section>
-
-        <!-- Providers Section -->
-        <section class="py-12 bg-white/5 border-y border-white/5 overflow-hidden">
-            <div class="max-w-7xl mx-auto px-4">
-                <p class="text-center text-[#a1adb5] text-xs font-bold tracking-[0.2em] uppercase mb-8">Trusted by Top Providers</p>
-                <div class="flex items-center gap-12 md:gap-24 overflow-x-auto no-scrollbar justify-center opacity-40 grayscale contrast-125">
-                    <img class="h-8 md:h-10 shrink-0" src="/assets/images/marquee/1Voucher.png" alt="provider" />
-                    <img class="h-8 md:h-10 shrink-0" src="/assets/images/marquee/CellC.png" alt="provider" />
-                    <img class="h-8 md:h-10 shrink-0" src="/assets/images/marquee/Mtn.png" alt="provider" />
-                    <img class="h-8 md:h-10 shrink-0" src="/assets/images/marquee/Flash.png" alt="provider" />
-                    <img class="h-8 md:h-10 shrink-0" src="/assets/images/marquee/Telkom.png" alt="provider" />
-                    <img class="h-8 md:h-10 shrink-0" src="/assets/images/marquee/Vodacom.png" alt="provider" />
                 </div>
             </div>
         </section>
@@ -292,7 +269,7 @@
         </div>
         <div class="max-w-7xl mx-auto mt-12 pt-8 border-t border-border-dark/30 flex flex-col md:flex-row justify-between gap-4 text-[10px] uppercase tracking-widest font-bold text-[#556068]">
             <p>© 2026 VOUCHER TO CASH.</p>
-            <p>PROTOTYPE V2C APP</p>
+            <p>PROTOTYPE VTC APP</p>
         </div>
     </footer>
 
