--- a/index.html
+++ b/index.html
@@ -68,9 +68,8 @@
             </div>
             <div class="flex items-center gap-6">
                 <a class="hidden md:block text-[#a1adb5] hover:text-white text-sm font-semibold transition-colors" href="https://boesackjnr.github.io/" target="_blank">boesackjnr</a>
-                <button class="bg-primary hover:bg-primary/90 text-white text-sm font-bold py-2 px-5 rounded-lg transition-all active:scale-95 shadow-lg shadow-primary/20">
-                    <a href="https://boesackjnr.github.io/Voucher-To-Cash-App" target="_blank">Launch App</a>
-                </button>
+
+                <a href="https://boesackjnr.github.io/Voucher-To-Cash-App"target="_blank" class="bg-primary hover:bg-primary/90 text-white text-sm font-bold py-2 px-5 rounded-lg transition-all active:scale-95 shadow-lg shadow-primary/20 inline-flex items-center justify-center">Launch App</a>
             </div>
         </div>
     </nav>
@@ -91,12 +90,9 @@
                         Instant conversion. Secure transfers. Zero hidden fees. The most reliable way to liquidate your digital value to Cash.
                     </p>
                     <div class="flex flex-col sm:flex-row gap-4">
-                        <button class="bg-primary hover:bg-primary/90 text-white text-lg font-bold py-4 px-8 rounded-xl transition-all shadow-lg shadow-primary/20 flex items-center justify-center gap-2">
-                            <span class="material-symbols-outlined">Launch</span>
-                            Launch App
-                        </button>
-                        <button class="bg-white/5 border border-white/10 hover:bg-white/10 text-white text-lg font-bold py-4 px-8 rounded-xl transition-all flex items-center justify-center gap-2">
-                            See Rates
+                        <a href="https://boesackjnr.github.io/Voucher-To-Cash-App" target="_blank" class="bg-primary hover:bg-primary/90 text-white text-lg font-bold py-4 px-8 rounded-xl transition-all shadow-lg shadow-primary/20 flex items-center justify-center gap-2 active:scale-95">
+                        <span class="material-symbols-outlined">rocket_launch</span>Launch App</a>
+                        <button class="bg-white/5 border border-white/10 hover:bg-white/10 text-white text-lg font-bold py-4 px-8 rounded-xl transition-all flex items-center justify-center gap-2">See Rates
                         </button>
                     </div>
                 </div>
