--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
         </div>
         <div class="max-w-7xl mx-auto mt-12 pt-8 border-t border-border-dark/30 flex flex-col md:flex-row justify-between gap-4 text-[10px] uppercase tracking-widest font-bold text-[#556068]">
             <p>© 2026 VOUCHER TO CASH.</p>
-            <p>PROTOTYPE DEV PHONE APP</p>
+            <p>PROTOTYPE DEV (PHONE) APP</p>
         </div>
     </footer>
 
